[main] Update overall.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "gsl_queue.h": "c",
     "gsl_def.h": "c",
-    "gsl_feature.h": "c"
+    "gsl_feature.h": "c",
+    "gsl_config.h": "c"
   }
 }
