[main][SC-G0] Add project reference, GSL.

--- a/Project/SC_NUCLEO-G0B1RE/.project
+++ b/Project/SC_NUCLEO-G0B1RE/.project
@@ -3,6 +3,7 @@
 	<name>SC_NUCLEO-G0B1RE</name>
 	<comment></comment>
 	<projects>
+		<project>GSL</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
