[main][SC-L0] Rename project name.

--- a/Project/SC_NUCLEO-L053R8/.project
+++ b/Project/SC_NUCLEO-L053R8/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Showcase_L053R8TX</name>
+	<name>SC_NUCLEO-L053R8TX</name>
 	<comment></comment>
 	<projects>
 		<project>GSL</project>
